--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "4.0.2",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
